--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -50,41 +50,41 @@ be propelled by an air current
 *German: [[wehen]] 
 {{mid}}
 {{bottom}}
-explode <--!3-->
+explode <!--3-->
 {{top}}
 *German: [[hochgehen]], [[in]] [[die]] [[Luft]] [[gehen]], [[explodieren]]
 {{mid}}
 *Russian: [[взрываться]]/[[взорваться]] (vzryvát's'a/vzorvát's'a), [[взлетать на воздух]]/[[взлететь на воздух]] (vzletát' na vózduχ/vzlet'ét' na vózduχ)
 {{bottom}}
-be very undesirable (see also suck) <--!4-->
+be very undesirable (see also suck) <!--4-->
 {{top}}
 {{mid}}
 {{bottom}}
-(of a cetacean) exhale visibly through the spout the seawater <--!5-->
+(of a cetacean) exhale visibly through the spout the seawater <!--5-->
 {{top}}
 {{mid}}
 {{bottom}}
-propel by an air current <--!6-->
+propel by an air current <!--6-->
 {{top}}
 *German: [[blasen]], [[wegblasen]], [[fortblasen]], [[hinfortblasen]], [[pusten]], [[wegpusten]]
 {{mid}}
 *Russian: [[сдувать]]/[[сдуть]] (sduvát'/sdut')
 {{bottom}}
-squander <--!7-->
+squander <!--7-->
 {{top}}
 {{mid}}
 *Russian: [[продувать]]/[[продуть]] (produvát'/produt')
 {{bottom}}
-fellate <--!8-->
+fellate <!--8-->
 {{top}}
 {{mid}}
 {{bottom}}
-create or shape by blowing <--!9-->
+create or shape by blowing <!--9-->
 {{top}}
 {{mid}}
 *Russian: [[выдувать]]/[[выдуть]] (vyduvát'/výdut')
 {{bottom}}
-leave <--!10-->
+leave <!--10-->
 {{top}}
 {{mid}}
 {{bottom}}
