--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -292,6 +292,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 [[io:break]]
 [[it:break]]
 [[hu:break]]
+[[ja:break]]
 [[pl:break]]
 [[pt:break]]
 [[ru:break]]
