robot  Adding: fi, fr <bubble#1097991>

--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -43,6 +43,8 @@
 *Finnish: [[kuplia]], [[poreilla]]
 *Swedish: [[bubbla]]
 
+[[fr:bubble]]
 [[gl:bubble]]
 [[it:bubble]]
+[[fi:bubble]]
 [[ta:bubble]]
