/* Translations */ Seri <badger#1099318>

--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -64,6 +64,7 @@
 *[[Sardinian]]: [[tassu]], [[cane de ribu]]
 *Scottish Gaelic: [[broc]]
 *Serbian: [[jазавац]] (jazavac)
+*Seri: [[ziix hant ctaxoj]], [[xeezej]]
 *Slovak: [[jazvec]] ''m''
 *Slovenian: [[jazbec]] ''m''
 *Spanish: [[tejón]] ''m''
