--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -8,11 +8,12 @@
 
 ===Etymology===
 ====Noun====
-'''mill''' (''plural'' '''[[mills]]''')
+'''mill''' (pl. ''mills'')
 
+#A grinding apparatus for substances such as grains, seeds, etc.
+#The buiding housing such a grinding apparatus.
 #A manufacturing plant for paper, steel, textiles, etc.
 #A building housing such a plant.
-#A grinding machine for substances such as flour, [[vegoil]], etc.
 #An establishment that handles a certain type of situation routinely, such as a divorce mill, etc.
 
 =====Synonyms=====
@@ -30,6 +31,23 @@
 *[[windmill]]
 
 =====Translations=====
+'''grinding apparatus or the building housing it'''
+{{top}}
+*Croatian: [[mlin]] ''m''
+*Dutch: [[molen]] ''m''
+*Finnish: [[mylly]]
+*French: [[moulin]] ''m''
+*German: [[Mühle]] ''f''
+{{mid}}
+*Hungarian: [[malom]]
+*Italian: [[mulino]] ''m''
+*Old High German: [[mulin]] ''f''
+*Polish: [[młyn]] ''m''
+*Slovenian: [[mlin]] ''m''
+*Spanish: [[molino]] ''m''
+*Turkish: [[değirmen]]
+{{bottom}}
+
 
 '''manufacturing plant'''
 {{top}}
@@ -53,19 +71,6 @@
 {{mid}}
 *Polish: [[fabryka]] ''f''
 *Spanish: [[fabrica]] ''f''
-{{bottom}}
-
-'''grinding machine'''
-{{top}}
-*Dutch: [[molen]] ''m''
-*Finnish: [[mylly]]
-*French: [[moulin]] ''m''
-*German: [[Mühle]] ''f''
-*Turkish: [[değirmen]]
-{{mid}}
-*Italian: [[mulino]] ''m''
-*Polish: [[młyn]] ''m''
-*Spanish: [[molino]] ''m''
 {{bottom}}
 
 '''establishment that handles a certain type of situation routinely'''
