--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -27,6 +27,7 @@
 *French: [[poids]]
 *German: [[Gewicht]] {{n}}
 {{mid}}
+*Russian: [[вес]] (v'es) {{m}}
 *Swedish: [[tyngd]] {{c}}
 *[[Telugu]]: [[భారము]] (bhaaramu)
 *Ukrainian: [[вага]] (wah'''a''') {{f}}
@@ -38,14 +39,35 @@
 *French: [[poids]]
 *German: [[Gewicht]] {{n}}
 {{mid}}
+*Russian: [[груз]] (gruz) {{m}}
 *Swedish: [[vikt]] {{c}}
 *[[Telugu]]: [[బరువు]] (baruvu)
+{{bottom}}
+;measuring weights
+{{top}}
+{{mid}}
+*Russian: [[гиря]] (gír'a) {{f}}
+{{bottom}}
+;sport device
+{{top}}
+{{mid}}
+*Russian: [[блин]] (blin) {{m}} ''disc'', [[гиря]] (gír'a) {{f}} ''dumbbell'', [[гантель]] (gantél') {{f}} ''barbell''
+{{bottom}}
+;mass
+{{top}}
+{{mid}}
+*Russian: [[вес]] (v'es) {{m}}, [[масса]] (mássa) {{f}}
+{{bottom}}
+;statistical value
+{{top}}
+{{mid}}
+*Russian: [[вес]] (v'es) {{m}}
 {{bottom}}
 
 =====Translations to be checked=====
 <!--Remove this section once all of the translations below have been moved into the tables above.-->
 {{checktrans}}
-*{{ttbc|Russian}}: вес (5)*Chinese: [[重]] (zhòng), [[重量]] (zhòng liàng), [[砝码]] (fá mǎ)
+*Chinese: [[重]] (zhòng), [[重量]] (zhòng liàng), [[砝码]] (fá mǎ)
 *{{ttbc|Hungarian}}: [[tömeg]]
 *{{ttbc|Ido}} : [[pezo]]
 *{{ttbc|Indonesian}}: [[berat]]
