--- a/en/d/dormouse.8238.wikitext
+++ b/en/d/dormouse.8238.wikitext
@@ -35,7 +35,7 @@
 *Irish: [[luch hodlamáin]], [[dallóg fhéir]]
 *Italian: [[ghiro]] ''m''
 *[[Ladin]]: [[ghiro]]
-*Latin: [[Myoxus]] [[glis]] (=[[Glis]] [[glis]]), [[Muscardinus]], [[Dryomys]]
+*Latin: [[Myoxus]] [[glis]] (=[[Glis]] [[glis]]) ''m'', [[Muscardinus]], [[Dryomys]]
 *Latvian: [[susuris]], [[susuris]]
 *Lithuanian: [[miegapelė]]
 *[[Lower Sorbian]]: [[połsk]]
