/* Related terms */ <dummy#1108041>

--- a/en/d/dummy.26267.wikitext
+++ b/en/d/dummy.26267.wikitext
@@ -21,6 +21,7 @@
 *Synonym: [[pleonastic]]
 *[[dumb]]
 *[[dummy up]]
+*[[dummy out]]
 
 ====Translations====
 *Dutch: [[fopspeen]] (3), [[speen]] (3) {{m}}
