--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -67,6 +67,7 @@ Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse 
 *[[Interlingua]]: [[benque]], [[malgrado]], [[non obstante]]
 *Italian: [[comunque]], [[nonostante]]
 *Portuguese: no [[entanto]]
+*Spanish: [[no obstante]]
 *Swahili: [[ijapokuwa]], [[hata hivyo]]
 *[[Volapük]]: [[do#Volapük|do]]
 
