--- a/en/w/whistler.7356.wikitext
+++ b/en/w/whistler.7356.wikitext
@@ -6,3 +6,5 @@
 # the [[whistling marmot]]
 # the [[goldeneye]]
 #{{physics}} an [[audio]]-[[frequency]] [[electromagnetic wave]] produced by [[atmospheric]] [[disturbance]]s such as [[lightning]]
+
+[[zh:whistler]]
