/* Verb */ Computing usage <bind#1129465>

--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -11,6 +11,7 @@ From Old English [[bindan]].
 *IPA: /'baɪnt/|'''[[binds]]'''|'''[[bound]]'''|'''[[bound]]'''|'''[[binding]]'''}}
 # to [[connect]]
 # to [[couple]]
+# {{computing}} to associate a variable name with a storage location
 ====Translations====
 {{top}}
 *Dutch: [[binden]], [[verbinden]], [[koppelen]]
