--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -11,7 +11,7 @@ From Old English [[bindan]].
 *IPA: /'baɪnt/|'''[[binds]]'''|'''[[bound]]'''|'''[[bound]]'''|'''[[binding]]'''}}
 # to [[connect]]
 # to [[couple]]
-# {{computing}} to associate a variable name with the content of a storage location
+# {{computing}} to associate an [[identifier]] with a value; to associate a variable name with the content of a storage location
 ====Translations====
 {{top}}
 *Dutch: [[binden]], [[verbinden]], [[koppelen]]
