--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -50,27 +50,43 @@
 *[[w:Wu (linguistics)|Wu]] ([[w:Suzhou dialect|Suzhou dialect]]): [[ruánl tondæ]]
 {{bottom}}
 
+----
+
 ==Dutch==
-===Verb===
+===Verb form===
 '''bet'''
 
 # singular present tense of [[betten]]
 
-==Hebrew==
-===Spelling Variant===
-* [[beth]] the 2nd letter in the [[Hebrew alphabet]]
-
+----
 
 ==Latvian==
 ===Conjunction===
 '''bet'''
 # [[but]]
 
+----
+
 ==Norwegian==
 ===Verb===
 [[Category:Norwegian verb forms]]
 '''bet''' or '''[[beit]]'''
 #''past tense'' of [[bite#Norwegian|bite]]
+
+----
+
+==Old English==
+===Etymology===
+Common Germanic *''[[bataz]]''
+===Adverb===
+'''bet'''
+
+# [[better]]
+# [[rather]]
+
+[[Category:Old English adverbs]]
+
+----
 
 ==Swedish==
 ===Verb===
@@ -79,14 +95,18 @@
 # past tense of [[bita]]
 [[Category:Swedish verb forms]]
 
+----
+
 ==Tok Pisin==
 ===Noun===
 '''bet'''
 
 # [[bed]].
 
-== Volapük == 
-=== Noun === 
+----
+
+==[[Volapük]]== 
+===Noun=== 
 '''bet'''
 
 # [[flower bed]]
