--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -47,6 +47,8 @@
 
 #An [[inclination]] or [[talent]].
 #: ''He had a natural bent for painting.''
+#A [[predisposition]] to act or react in a particular way.
+#: ''His mind was of a technical bent.''
 
 ====Translations====
 *Dutch: [[aanleg]] {{m}}
