--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -103,6 +103,7 @@ From Northern [[French]]
 ==== Synonyms ====
 * [[babble]]
 * [[prattle]]
+* [[blather]]
 
 ==== Related terms ====
 * [[chew the fat]]
