--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -4,6 +4,9 @@
 ===Etymology===
 From Latin ''[[divisio]]'', noun of process form from perfect passive participle ''[[divisus]]'', divided, from ''[[dividere]]'', to divide
 
+===Pronunciation===
+*{{audio|en-us-division.ogg|Audio (US)}}
+
 ===Noun===
 '''division''' (''[[countable]] and [[uncountable]]; plural'' '''[[divisions]]''')
 
