--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -23,7 +23,7 @@ From French ''simple'', from Latin ''[[simplex]]''
 *Chinese: [[简单化]]
 *Esperanto: [[simpla]]
 *Finnish: [[yksinkertainen]] ([[simppeli]] {{slang}})
-*German: [[einfach]]
+*German: [[einfach]] (1,2), [[simpel]] (1)
 *Japanese: [[簡単な]]、[[単純な]]
 *Latin: [[simplex]]
 *Portuguese: [[simples]]
