--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -70,9 +70,10 @@ Latin [[ructus]]
 ===Pronunciation===
 {{IPA|[ʁoːt]}}
 ===Etymology===
-Old High German ''rōt'', akin to Old Saxon ''rōd'', compare Dutch [[rood]]
+Old High German ''[[rōt]]'', akin to Old Saxon ''rōd'', compare Dutch ''[[rood]]''
 ===Adjective===
 '''rot'''
+
 # [[red]]
 
 ===Derived terms===
@@ -85,6 +86,18 @@ Old High German ''rōt'', akin to Old Saxon ''rōd'', compare Dutch [[rood]]
 *[[Rot]]
 
 [[Category:German adjectives]]
+
+----
+
+==Old High German==
+===Etymology===
+Common Germanic *''[[raudhaz]]'', whence also Old English ''[[rēad]]'', Old Norse ''[[rauðr]]''
+===Adjective===
+'''rōt'''
+
+# [[red]]
+
+[[Category:Old High German adjectives]]
 
 ----
 
