--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -3,9 +3,10 @@
 *stäf, /stɑːf/, /<tt>stA:f</tt>/
 *:[[Rhymes:English:-ɑːf|Rhymes: -ɑːf]]
 <!-- is there also an -æf pronunciation? -->
-
+===Etymology===
+Old English ''[[stæf]]''
 ===Noun===
-'''staff''' (''plural:'' '''staffs''' ''or'' '''staves''') 
+'''staff''' (pl. ''staffs'' or ''staves'') 
 
 #''(plural:'' '''staffs''' ''or'' '''staves''''')''  a [[long]], [[straight]] [[stick]]
 #''(plural:'' '''staves''''')'' a [[series]] of [[horizontal]] [[line]]s on which [[music]]al [[note]]s are written.
