--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -17,6 +17,7 @@ From Old English [[bindan]].
 *Dutch: [[binden]], [[verbinden]], [[koppelen]]
 *Finnish: [[sitoa]], [[yhdistää]]
 * French: [[relier]] (livre)
+*German: [[verbinden]] (1,2), [[konnektieren]] (1)
 * [[Ido]]: [[bindar]]
 *Indonesian: [[ikat]], [[sambung]], [[hubung]]
 {{mid}}
