/* English */ +audio <sir#1147169>

--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -3,6 +3,9 @@
 ===Etymology===
 Via Norman French from Latin ''[[senior]]'', '''older''' or '''elder''', from ''[[senex]]'', '''old'''
 
+===Pronunciation===
+* {{audio|en-us-sir.ogg|Audio (US)}}
+
 ===Prefix===
 '''Sir'''
 
