--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Etymology===
-{{F.}} ''[[théorie]]'', from {{L.}} ''[[theoria]]'', from {{Gr.}} [[θεωρία]]
+in {{F.}} ''[[théorie]]'', in {{L.}} ''[[theoria]]'', in {{Gr.}} [[θεωρία]]
 
 ===Noun===
 [[Category:1000 English basic words]]
