--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -1,11 +1,12 @@
 {{wikipedia}}
 ==English==
-=== Etymology ===
+
+===Etymology===
 {{L.}} ''species'' [[view]]; [[appearance]]; [[vision]]; [[dream]]; [[semblance]] ''specere'' to [[see]] + ''-ies'' suffix signifying [[abstract]] noun
 
-=== Noun ===
+===Noun===
 [[Category:English irregular plurals]]
-{{en-noun|species|species}}
+{{en-noun|species}}
 
 # A [[group]] of [[objects]] having [[similar]] [[appearance]].
 #: ''This species of rock is unique to the area''
@@ -15,7 +16,7 @@
 #: ''Hence, in determining whether a form should be ranked as a species or a variety, the opinion of naturalists having sound judgment and wide experience seems the only guide to follow.'' -- Darwin, '''On the Origin of Species'''
 # {{chemistry}} Refers to a specific known or unknown [[element]], [[molecule]], [[radical]] or [[ion]].  Used commonly when the [[entity]]'s status as an element, molecule etc. is unknown.
 
-==== Related Terms ====
+====Related Terms====
 *[[speciate]]
 *[[speciation]]
 *[[specious]]
@@ -58,6 +59,7 @@
 
 ----
 ==Latin==
+
 ===Etymology===
 ''[[specere]]'', "to [[see]]" + ''-ies'' suffix signifying [[abstract]] noun.
 ===Noun===
