--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -2,9 +2,6 @@
 
 {{rank|also|away|against|148|though|get|eyes|hand}}
 
-===Etymology===
-Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse [[þó]].
-
 ===Pronunciation===
 {| border=1 cellpadding=5
 ! !! [[w:IPA|IPA]] !! [[w:SAMPA|SAMPA]]
@@ -15,6 +12,8 @@ Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse 
 ! [[UK]]
 | /ðəʊ/ || /D@U/
 |}
+===Etymology===
+Middle English ''þoȝ'', borrowed from a Scandinavian source such as Old Norse ''[[þó]]'', which is akin to Old English ''[[þēah]]''
 
 ===Conjunction===
 '''though'''
@@ -77,3 +76,12 @@ Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse 
 [[hu:though]]
 [[fi:though]]
 [[zh:though]]
+==Old English==
+===Etymology===
+Common Germanic *''[[taz]]'', whence also Old English ''[[t]]'', Old High German ''[[t]]''
+===Noun===
+'''t''' ''m''
+
+# [[a]]
+
+[[Category:Old English nouns]]
