--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -2,6 +2,9 @@
 
 {{rank|also|away|against|148|though|get|eyes|hand}}
 
+===Etymology===
+Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse [[þó]].
+
 ===Pronunciation===
 {| border=1 cellpadding=5
 ! !! [[w:IPA|IPA]] !! [[w:SAMPA|SAMPA]]
@@ -12,8 +15,6 @@
 ! [[UK]]
 | /ðəʊ/ || /D@U/
 |}
-===Etymology===
-Middle English ''þoȝ'', borrowed from a Scandinavian source such as Old Norse ''[[þó]]'', which is akin to Old English ''[[þēah]]''
 
 ===Conjunction===
 '''though'''
