/* Pronunciation */ audio <thing#1150578>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -8,6 +8,7 @@ From Middle English, from Old English ''[[þing]]''.
 
 ===Pronunciation===
 *thĭng, /θɪŋ/, /TIN/
+*{{audio|en-us-thing.ogg|Audio (US)}}
 
 ===Noun===
 '''thing''' (''plural:'' [[things]]; ''diminutives:'' [[thingy]] / [[thingie]], [[thingo]] [''Aus''])
