--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -1,4 +1,4 @@
-''See also'' [[Thing]]
+{{see|Thing}}
 ==English==
 
 {{rank|got|let|world|194|thing|set|told|both}}
@@ -16,11 +16,11 @@ From Middle English, from Old English ''[[þing]]''.
 # That which is considered to [[exist]] as a [[separate]] [[entity]], [[quality]] or [[concept]].
 # A [[word]], [[symbol]], [[sign]] or other [[referent]] that can be used to [[refer]] to any entity.
 # An [[individual]] [[object]].
-#{{law}} whatever can be [[owned]].
+# {{law}} whatever can be [[owned]].
 # the [[latest]] [[fad]] or [[fashion]].
-#(''in plural'') [[clothes]], [[possessions]] or [[equipment]].
-#A unit. 
-#:''Get me a thing of [[apple juice]] at the store.''
+# {{italbrac|in plural}} [[clothes]], [[possessions]] or [[equipment]].
+# A unit. 
+#: ''Get me a thing of [[apple juice]] at the store.''
 # In [[Scandinavian]] countries, a [[legislative]] or [[judicial]] [[assembly]].
 
 ====Synonyms====
@@ -57,7 +57,7 @@ From Middle English, from Old English ''[[þing]]''.
 *Dutch: [[ding]] {{n}}
 *Estonian: [[asi]], [[ese]]
 *Finnish: [[asia]]
-*French: [[chose]] {{f}}, [[truc]] {{m}}, [[machin]] {{m}} ''(informal)''
+*French: [[chose]] {{f}}, [[truc]] {{m}}, [[machin]] {{m}} {{italbrac|informal}}
 *[[Frisian]]: [[ding]] {{n}}
 *German: [[Ding]] {{n}}
 *[[Galician]]: [[cousa]]
@@ -109,7 +109,7 @@ From Middle English, from Old English ''[[þing]]''.
 *Dutch: [[ding]] {{n}}
 *Estonian: [[asi]], [[ese]]
 *Finnish: [[asia]]
-*French: [[chose]] {{f}}, [[truc]] {{m}}, [[machin]] {{m}} ''(informal)''
+*French: [[chose]] {{f}}, [[truc]] {{m}}, [[machin]] {{m}} {{italbrac|informal}}
 *[[Frisian]]: [[ding]] {{n}}
 *German: [[Ding]] {{n}}
 *[[Galician]]: [[cousa]]
