--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -5,7 +5,7 @@
 
 ===Verb===
 [[Category:English irregular verbs]]
-{{en-verb2|'''to bend'''|'''[[bends]]'''|'''[[bent]]'''|'''[[bent]]'''|'''[[bending]]'''}}
+{{en-verb|bends|bending|bent}}
 
 # {{transitive}} To cause (something) to change its shape into a [[curve]], by [[physical]] [[force]], [[chemical]] action, or any other means.
 # {{transitive}} {{nautical}} To [[join]] one [[rope]] to another, or to an object
@@ -17,6 +17,7 @@
 #: ''To bow properly, '''bend''' at the waist.''
 
 ====Translations====
+{{rfc-trans}}
 {{top}}
 *Dutch: [[buigen]], [[plooien]] <!-- not checked -->
 *Finnish: [[taivuttaa]] (1), [[taipua]] (5)
@@ -35,7 +36,7 @@
 {{bottom}}
 
 ===Noun===
-{{en-noun|bend|bends}}
+{{en-noun}}
 
 # A [[curve]].
 #: ''There's a sharp bend in the road ahead.''
