--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -2,30 +2,33 @@
 
 {{rank|expression|Duke|battle|736|bound|York|impossible|greatest}}
 
-=== Pronunciation ===
-*[[w:SAMPA|SAMPA]]: /'/
-*[[w:IPA|IPA]]: /'bɑʊnd/
+===Pronunciation===
+*{{SAMPA|/'/}}
+*{{IPA|/'bɑʊnd/}}
 
 ===Etymology 1===
 ====Verb====
 '''bound'''
-# Past tense of ''to [[bind]]''.
-#: ''I bound the splint to my leg.''
-# Past participle of ''to [[bind]]''.
-#: ''I had bound the splint with duct tape.''
+
+# {{past of|bind}}
+#: ''I '''bound''' the splint to my leg.''
+#: ''I had '''bound''' the splint with duct tape.''
 
 ===Etymology 2===
 ====Noun====
-{{en-noun|bound|bounds}}
+{{en-noun}}
+
 # (''often used in plural'') The border of a territory, which one must cross in order to enter or leave the territory.
 #: ''I reached the northern bound of my property, took a deep breath, and walked on.''
 #: ''Somewhere within these bounds you may find a buried treasure.''
-#(''mathematics'') a [[value]] which is known to be greater or smaller than a given set of values
+# {{mathematics}} a [[value]] which is known to be greater or smaller than a given set of values
 
 =====Translations=====
+{{rfc-trans}}
 *Dutch: [[limiet]] (1), [[grens]] (1), [[landpaal]] (1)
 *German: [[Schranke]] ''f'' (2)
 *Telugu: పరిధి
+
 =====Derived terms=====
 *[[boundary]]
 *[[least upper bound]]
@@ -35,7 +38,8 @@
 *[[within bounds]]
 
 ====Verb====
-'''to bound'''
+{{en-verb}}
+
 # To surround a territory.
 #: ''Nebraska, Missouri, Oklahoma and Colorado bound Kansas.''
 *'''Usage notes:''' Tends to be used in passive voice, as ''Kansas is bounded by Nebraska on the north, Missouri on the east ...''.
@@ -46,27 +50,31 @@
 
 ===Etymology 3===
 ====Noun====
-{{en-noun|bound|bounds}}
+{{en-noun}}
+
 # A sizeable jump.
 #: ''The deer crossed the stream in a single '''bound'''.''
 
 ====Verb====
-{{en-verb|bound|bounds|bounded|bounding}}
+{{en-verb}}
+
 # To move by jumping.
 #: ''The rabbit bounded down the lane.''
+
 =====Derived terms=====
 *[[rebound]]
 
 ===Etymology 4===
 ====Adverb====
 '''bound'''
+
 # Directed towards.
 #: ''Is that message bound for me?''
 #: ''Which way are you bound?''
 # (''with infinitive of a verb'') Indicates something which cannot be avoided.
 #: ''The leaking fuel tank was bound to explode sooner or later.''
 
-===== Translations =====
+=====Translations=====
 '''Directed towards'''
 *Dutch: [[bestemd]] (voor)
 
@@ -88,7 +96,6 @@
 *[[meets and bounds]]
 *[[softbound]]
 *[[inbound]]
-
 
 [[Category:English words with multiple etymologies]]
 
