--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -77,6 +77,7 @@ The translations below need to be checked by native speakers and inserted into t
 
 [[Category:Malay derivations]]
 
+[[ar:bamboo]]
 [[fr:bamboo]]
 [[io:bamboo]]
 [[hu:bamboo]]
