robot  Adding: ar <break#1152639>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -314,6 +314,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 
 [[Category:English homophones]]
 
+[[ar:break]]
 [[el:break]]
 [[es:break]]
 [[fr:break]]
