--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -1,8 +1,8 @@
 ==English==
-
+===Etymology===
+Old English ''[[leþer]]''
 ===Pronunciation===
 *{{audio|en-us-leather.ogg|Audio (US)}}
-
 ===Noun===
 {{wikipedia}}
 '''leather'''
