robot  Adding: tr <sir#1156059>

--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -89,4 +89,5 @@ Via Norman French from Latin ''[[senior]]'', '''older''' or '''elder''', from ''
 [[ja:sir]]
 [[pl:sir]]
 [[sl:sir]]
+[[tr:sir]]
 [[zh:sir]]
