{{IPA}} et al.; {{infl}} <ferret#1156354>

--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -1,17 +1,19 @@
 ==English==
+
 {{wikipedia}}
 ===Etymology===
-From Old French [[fuiret]] (modern [[furet]]), from from late Latin [[furo]] ‘thief, ferret’, diminutive of Latin [[fur#Latin|fur]] ‘thief’.
+From Old French ''[[fuiret]]'' (modern ''[[furet]]''), from from late Latin ''[[furo]]'' ‘thief, ferret’, diminutive of Latin ''[[fur#Latin|fur]]'' ‘thief’.
 
-=== Pronunciation ===
+===Pronunciation===
 *{{IPA|/ˈferɪt/}}
-*fĕr'ət, /<tt>"fer@t<tt>/
+*{{AHD|fĕr'ət}}, {{SAMPA|/"fer@t/}}
 
-=== Noun ===
-{{en-noun|ferret|ferrets}}
+===Noun===
+{{en-noun}}
+
 #A [[mammal]], ''Mustela putorius furo'', rather like a [[weasel]], but which was originally bred from the [[polecat]] and often trained to [[hunt]] [[rat]]s or [[rabbit]]s in [[England]].
 
-==== Translations ====
+====Translations====
 {{top}}
 *'''Albanian''': [[qelbësi]]
 *'''Basque''': [[hudo]]
@@ -64,7 +66,8 @@ From Old French [[fuiret]] (modern [[furet]]), from from late Latin [[furo]] ‘
 {{bottom}}
 
 ===Verb===
-'''ferret'''
+{{en-verb}}
+
 #To hunt [[game]] with ferrets
 #To [[uncover]] and bring to [[light]] by [[searching]];usually to ''ferret out''
 
