/* Adjective */ "Great" is more appropriate. <mega#1156943>

--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -7,7 +7,7 @@ From the prefix [[mega-]].
 '''mega'''
 
 #(''informal'') Very large.
-#(''informal'') Impressive.
+#(''informal'') Great.
 
 ====Related terms====
 <!-- These are mainly nonce words, unless specific definitions are known and entries can be set up
@@ -28,6 +28,7 @@ From the prefix [[mega-]].
 *[[mega-selection]]
 *[[mega speed]]
 -->
+
 ===See also===
 *[[mega-]]
 
