--- a/en/d/dummy.26267.wikitext
+++ b/en/d/dummy.26267.wikitext
@@ -16,6 +16,7 @@
 # {{complang}} An unused parameter or value.
 #: ''If <code>flag1</code> is false, the other parameters are '''dummies'''.''
 # A [[ventriloquist's dummy]].
+# Small railway signal.
 
 ====Related terms====
 *Synonym: [[pleonastic]]
