--- a/en/b/bepalingaankondigend voornaamwoord.4386.wikitext
+++ b/en/b/bepalingaankondigend voornaamwoord.4386.wikitext
@@ -1,4 +1,8 @@
 ==Dutch==
+
 ===Noun===
-'''Bepalingaankondigend voornaamwoord'''
+'''[[Bepalingaankondigend]] [[voornaamwoord]]'''
+
 # (grammatical terminology)
+
+{{stub}}
