--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -48,7 +48,7 @@
 *Portuguese: [[rato almiscareiro]]
 *Romanian: [[bizam]]
 *Romansh: [[undatra]]
-*Russian: [[ондатра]] ([[ondatra]]) {{f}}
+*Russian: [[ондатра]] /ondátra/ {{f}}
 *[[Sami]]: [[bisámroahttu]]
 *[[Sardinian]]: [[medrona muscada]], [[topi muscau]]
 *Scottish: [[radan molach]]
