robot  Adding: ky <rot#1164831>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -155,6 +155,7 @@ Common Germanic *''[[raudhaz]]'', whence also Old English ''[[rēad]]'', Old Nor
 [[ko:rot]]
 [[io:rot]]
 [[it:rot]]
+[[ky:rot]]
 [[hu:rot]]
 [[ja:rot]]
 [[pl:rot]]
