--- a/en/c/CD-ROM.26226.wikitext
+++ b/en/c/CD-ROM.26226.wikitext
@@ -3,6 +3,8 @@
 ==={{Abbreviation}}===
 '''CD-ROM''' ''or'' '''[[CD ROM]]'''
 # ''part {{Initialism}}'' Compact Disk - ''{{acronym}}'' Read Only Memory.  A device that can read [[CD]]s (Compact Disks), but can not write to them.  Additionally, this is also a class of Compact Disks that are manufactured with the data and shipped, but cannot be written to at all.
+
+[[cs:CD-ROM]]
 [[de:CD-ROM]]
 [[et:CD-ROM]]
 [[fr:CD-ROM]]
