{{infl}}; cattag <quack#1179064>

--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -7,7 +7,7 @@
 *{{audio|en-us-quack.ogg|Audio (US)}}
 
 ===Noun===
-{{en-noun-reg}}
+{{en-noun}}
 
 # a sound made by a [[duck]].
 #:''Did you hear that duck make a '''quack'''?''
@@ -15,7 +15,7 @@
 #:''That doctor is nothing but a lousy '''quack'''!''
 # a [[charlatan]].
 #:''What a '''quack''' he is, saying that's an organic [[Viagra]]&#8482; !'' 
-# (''slang'') a [[doctor]].
+# {{slang}} a [[doctor]].
 
 ====Translations====
 *Dutch: [[kwak]] (1), [[kwakzalver]] (2, 3)
@@ -30,13 +30,13 @@
 *Spanish: [[cuac]] (1); [[curandero]] ''m'' (2)
 
 ===Adjective===
-'''quack'''  (''no'' {{compar}} ''or'' {{superl}})
+{{en-adj|-}}
 
 # falsely presented as having [[medicinal]] [[power]]s.
 #:''Don't get your hopes up; that's '''quack''' medicine!''
 
 ===Verb===
-{{en-infl-reg-consonant|quack||}}
+{{en-verb}}
 
 # To make a [[noise]] like a [[duck]].
 #:''The more breadcrumbs I threw on the ground, the more they '''quacked'''.''
