--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -65,6 +65,7 @@ Old English ''[[þonne]]''
 *[[Esperanto]]: [[tiam]]
 *Finnish: [[sitten]] [[:fi:sitten|^]]
 *French: [[puis]]
+*German: [[danach]]
 {{mid}}
 *[[Kurdish]]: [[paşî]], [[dûre]], [[piştre]], [[dûvre]], [[peyre]]
 *Portuguese: [[seguidamente]], [[sequencialmente]]
