--- a/en/p/prisoner of war.4326.wikitext
+++ b/en/p/prisoner of war.4326.wikitext
@@ -1,31 +1,32 @@
 ==English==
+
 ===Noun===
 {{wikipedia}}
-'''prisoner of war''' (''plural'' '''prisoners of war''')
+'''[[prisoner]] [[of]] [[war]]''' (''plural:'' '''[[prisoners of war]]''')
 
-#A soldier or combatant who is captured by the enemy.  Abbreviation: '''[[POW]]'''
-#:''As a prisoner of war, he was interrogated by his enemy captors.''
+# A soldier or combatant who is captured by the enemy.  Abbreviation: '''[[POW]]'''
+#: ''As a '''prisoner of war''', he was interrogated by his enemy captors.''
 
 ====Translations====
 {{top}}
 *Chinese: [[战俘]]/[[戰俘]] (zhàn fú)
-*Czech: [[zajatec]] ''m'', [[válečný zajatec]] ''m''
+*Czech: [[zajatec]] {{m}}, [[válečný zajatec]] {{m}}
 *Dutch: [[krijgsgevangene]]
 *Finnish: [[sotavanki]]
-*French: [[prisonnier de guerre]] ''m''
-*German: [[Kriegsgefangener]] ''m''
+*French: [[prisonnier de guerre]] {{m}}
+*German: [[Kriegsgefangener]] {{m}}
 *Greek, Modern: [[αιχμάλωτος πολέμου]] (aichmál&#333;tos polémou)
 *[[Interlingua]]: [[prisionero de guerra]] 
-*Italian: [[prigioniero di guerra]] ''m''
+*Italian: [[prigioniero di guerra]] {{m}}
 {{mid}}
 *Japanese: [[捕虜]] (horyo)
 *Korean: [[전쟁 포로]]
-*Latin: [[dediticius]] ''m''
-*Norwegian: [[krigsfange]] ''m''
+*Latin: [[dediticius]] {{m}}
+*Norwegian: [[krigsfange]] {{m}}
 *[[Persian]]: [[اسیر]] (asir), [[بندی]] (bandi)
 *Portuguese: [[prisioneiro de guerra]]
-*Slovak: [[zajatec]] ''m'' (''plural'' zajatci)
-*Spanish: [[prisionero de guerra]] ''m''
+*Slovak: [[zajatec]] {{m}} (''plural:'' zajatci)
+*Spanish: [[prisionero de guerra]] {{m}}
 *Swedish: [[krigsfånge]] 
 *Telugu: [[యుద్ధ ఖైదీ]] (yuddha khaidee)
 *Ukrainian: [[бранець]] (br'''a'''nec') {{m}}
@@ -33,6 +34,6 @@
 {{bottom}}
 
 ===Adjective===
-'''prisoner-of-war''' (''before the noun''), '''prisoner of war''' (''after the noun'')
-#Of or relating to a prisoner of war or prisoners of war.
-#:''After his capture he was taken to a prisoner-of-war camp.''
+'''[[prisoner]]-[[of]]-[[war]]''' (''before the noun''), '''prisoner of war''' (''after the noun'')
+# Of or relating to a prisoner of war or prisoners of war.
+#: ''After his capture he was taken to a '''prisoner-of-war''' camp.''
