infl; cattag <pig#1219078>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -5,13 +5,14 @@
 *{{audio|en-us-pig.ogg|Audio (US)}}
 
 ===Noun===
-{{en-noun2|'''pig'''|'''[[pigs]] '''or''' [[swine]]'''}}
+{{en-noun|pl2=swine}}
+
 #Any of several [[mammal]]s of the genus ''[[Sus]]'', having [[cloven]] [[hooves]], [[bristle]]s and a [[nose]] adapted for [[digging]]; especially the [[domesticated]] [[farm]] [[animal]] ''[[Sus scrofa]]''.
 #The [[edible]] [[meat]] of such an animal; [[pork]].
 #A [[greedy]] person; someone who overeats or eats rapidly and noisily.
 #A [[nasty]] or [[disgusting]] person.
 #A [[dirty]] person.
-#(''derogatory slang'') A [[police officer]].
+#{{cattag|derogatory slang}} A [[police officer]].
 #A [[difficult]] [[problem]].
 #A [[block]] of [[cast]] [[metal]]; the [[mold]] in which it is cast.
 #{{engineering}} A device for cleaning or inspecting the inside of an oil or gas pipline, or to separate different substances within the pipeline. Named for the pig-like squealing noise made by their progress.
@@ -180,6 +181,7 @@
 ----
 
 ==Danish==
+
 ===Noun===
 '''pig'''
 #[[thorn]]
