/* Translations */ +Italian <bind#1219984>

--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -21,6 +21,7 @@ From Old English [[bindan]].
 * [[Ido]]: [[bindar]]
 *Indonesian: [[ikat]], [[sambung]], [[hubung]]
 {{mid}}
+*Italian: [[legare]] (1), [[connettere]] (2)
 *Japanese: [[繋ぐ]] ([[つなぐ]], tsunagu), [[繋げる]] ([[つなげる]], tsunageru)
 *Portuguese: [[conectar]]
 *Spanish: [[atar]]
