robot  Adding: de <multiplication#1224632>

--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -67,6 +67,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 *[[multiplicité]]
 *[[multiplier]]
 
+[[de:multiplication]]
 [[fr:multiplication]]
 [[it:multiplication]]
 [[pl:multiplication]]
