robot  Adding: ar, de <division#1224721>

--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -166,6 +166,8 @@ Finnish: [[kaari]], [[pääjakso]]
 #[[division#English|division]]; act of dividing (e.g. numbers); large military unit; section of a company
 #(''sports'') division ''or'' [[league]]; a organization of sports teams that habitually play against each other for a championship; the level on which a certain team plays, as compared to others
 
+[[ar:division]]
+[[de:division]]
 [[et:division]]
 [[fr:division]]
 [[io:division]]
