--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -74,5 +74,6 @@ From French ''simple'', from Latin ''[[simplex]]''
 [[hu:simple]]
 [[pl:simple]]
 [[pt:simple]]
+[[simple:simple]]
 [[fi:simple]]
 [[zh:simple]]
