--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -65,6 +65,7 @@ From French ''simple'', from Latin ''[[simplex]]''
 [[Category:1000 English basic words]]
 
 [[ang:simple]]
+[[es:simple]]
 [[et:simple]]
 [[fa:simple]]
 [[fr:simple]]
