--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -164,6 +164,7 @@ French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek [[θεωρία]].
 [[io:theory]]
 [[it:theory]]
 [[hu:theory]]
+[[pt:theory]]
 [[fi:theory]]
 [[ta:theory]]
 [[zh:theory]]
