--- a/en/b/beheld.6791.wikitext
+++ b/en/b/beheld.6791.wikitext
@@ -1,23 +1,20 @@
 ==English==
 
+===Pronunciation===
+*[[w:IPA|IPA]]: /ˈbɪhεld/
+
 ===Verb===
 '''beheld'''
+
 # past tense of to [[behold]]
 
-===Pronunciation===
-*[[w:SAMPA|SAMPA]]: /'/
-*[[w:IPA|IPA]]: /'bɪhεld/
-
-===Translations===
+====Translations====
 *Dutch: [[aanschouwde]]
 
 ===Verb===
 '''beheld'''
+
 # past participle of to [[behold]]
 
-===Pronunciation===
-*[[w:SAMPA|SAMPA]]: /'/
-*[[w:IPA|IPA]]: /'bɪhεld/
-
-===Translations===
+====Translations====
 *Dutch: [[aanschouwd]]
