/* Translations to be checked */ +{{ttbc}} <blow#1228746>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -100,18 +100,15 @@ leave <!--10-->
 *{{ttbc|Finnish}}: [[tuulla]] (1), [[puhaltaa]] (2), [[räjähtää]] (3)
 *{{ttbc|French}}: [[souffler]] (1), [[exploser]] (3)
 *{{ttbc|Indonesian}}: [[tiup|meniup]], [[ledak|meledakkan]]
-
 *{{ttbc|Japanese}}: [[吹く]] ([[ふく]], fuku), [[爆発]]する ([[ばくはつ]]する, bakuhatsu-suru)
 *{{ttbc|Spanish}}: [[soplar]]
-*Telugu: [[ఊదు]] (oodu), [[కొట్టుకొనిపోవు]] (koTTukonipOvu), [[వీచు]] (veecu)
-*Vietnamese: [[thổi]] (1), [[nổ]] (2)
-
+*{{ttbc|Telugu}}: [[ఊదు]] (oodu), [[కొట్టుకొనిపోవు]] (koTTukonipOvu), [[వీచు]] (veecu)
+*{{ttbc|Vietnamese}}: [[thổi]] (1), [[nổ]] (2)
 
 ''transitive meanings''
 
 *{{ttbc|Finnish}}: [[puhaltaa]] (1,4), [[tuhlata]] (2), [[ottaa suihin]] (3)
 *{{ttbc|French}}: [[tailler]] la [[pipe]] (3)
-
 *{{ttbc|Vietnamese}}: [[phù phù]], thổi phù phù
 
 ===Noun===
