robot  Adding: io <weight#1231267>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -120,6 +120,7 @@ Old English ''[[wiht]]'', ''ġewiht''
 [[de:weight]]
 [[et:weight]]
 [[fr:weight]]
+[[io:weight]]
 [[it:weight]]
 [[hu:weight]]
 [[ja:weight]]
