--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -49,6 +49,7 @@
 *[[Galician]]: [[porco#Gallegan|porco]]
 *German: [[Schwein]] {{n}}
 *Greek: [[γουρούνι]] (gurúni) {{n}}, [[χοίρος]] (khíros) {{m}}
+*Hebrew: [[חזיר]] {{m}}
 *Hungarian: [[sertés]], [[disznó]], [[malac]]
 *Icelandic: [[svín]]
 *Ilocano: [[baboy]]
