--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -61,6 +61,7 @@ From Northern [[French]]
 *[[Judeo-Spanish]]: [[konejo]]
 *Korean: [[토끼]], to-ggi
 {{mid}}
+*[[Kurdish]]: {{trad|ku|kêroşk}}, {{trad|ku|xirrnîfk}}
 *[[Ladin]]: [[conicio]]
 *Latin: [[cuniculus]] ''m''
 *Latvian: [[trusis]]
