--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -21,8 +21,11 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 #{{botany}} A [[taxon]] at the rank of division or phylum.
 #A disagreement; a difference of viewpoint between two sides of an argument.
 #(''Sports''): A group that distinguishes itself from the others.
-#(''music'') a florid instrumental variation of a melody in the 17th and 18th centuries, originally conceived as the dividing of each of a succession of long notes into several short ones.
+#(''music'') A florid instrumental variation of a melody in the 17th and 18th centuries, 
+#{{music}} A set of pipes in a [[pipe organ]] which are independantly controlled and supplied.
+originally conceived as the dividing of each of a succession of long notes into several short ones.
 #(Law:) A concept whereby a common group of debtors are only responsible for their proportionate sum of the total debt.
+
 
 ====Translations====
 
