--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -1,25 +1,27 @@
 ==English==
 
 ===Pronunciation===
-*mĭl, /mɪl/, /<tt>mIl</tt>/
-===Homophones===
+*{{AHD|mĭl}}, {{IPA|/mɪl/}}, {{SAMPA|/mIl/}}
+
+====Homophones====
 *[[mil]]
 
-===Etymology===
+===Etymology 1===
 Old English ''[[mylen]]''
+
 ====Noun====
-'''mill''' (pl. ''mills'')
+{{en-noun}}
 
-#A grinding apparatus for substances such as grains, seeds, etc.
-#The buiding housing such a grinding apparatus.
-#A manufacturing plant for paper, steel, textiles, etc.
-#A building housing such a plant.
-#An establishment that handles a certain type of situation routinely, such as a divorce mill, etc.
+# A grinding apparatus for substances such as grains, seeds, etc.
+# The buiding housing such a grinding apparatus.
+# A manufacturing plant for paper, steel, textiles, etc.
+# A building housing such a plant.
+# An establishment that handles a certain type of situation routinely, such as a divorce mill, etc.
 
-====Synonyms====
+=====Synonyms=====
 *(''plant, building''): [[factory]], [[works]]
 
-====Derived terms====
+=====Derived terms=====
 *[[all grist to one's mill]]
 *[[miller]]
 *[[millhouse]]
@@ -30,46 +32,46 @@ Old English ''[[mylen]]''
 *[[steel mill]]
 *[[windmill]]
 
-====Translations====
+=====Translations=====
 '''grinding apparatus or the building housing it'''
 {{top}}
-*Croatian: [[mlin]] ''m''
-*Dutch: [[molen]] ''m''
+*Croatian: [[mlin]] {{m}}
+*Dutch: [[molen]] {{m}}
 *Finnish: [[mylly]]
-*French: [[moulin]] ''m''
-*German: [[Mühle]] ''f''
+*French: [[moulin]] {{m}}
+*German: [[Mühle]] {{f}}
 {{mid}}
 *Hungarian: [[malom]]
-*Italian: [[mulino]] ''m''
-*Old High German: [[mulin]] ''f''
-*Polish: [[młyn]] ''m''
-*Slovenian: [[mlin]] ''m''
-*Spanish: [[molino]] ''m''
+*Italian: [[mulino]] {{m}}
+*Old High German: [[mulin]] {{f}}
+*Polish: [[młyn]] {{m}}
+*Slovenian: [[mlin]] {{m}}
+*Spanish: [[molino]] {{m}}
 *Turkish: [[değirmen]]
 {{bottom}}
 
 '''manufacturing plant'''
 {{top}}
-*Dutch: [[fabriek]] ''f'' (''general''), [[papierfabriek]] ''f'' (''for paper''), [[staalfabriek]] (''for steel'') [[textielfabriek]] (''for textiles'') 
+*Dutch: [[fabriek]] {{f}} (''general''), [[papierfabriek]] {{f}} (''for paper''), [[staalfabriek]] (''for steel'') [[textielfabriek]] (''for textiles'')
 *Finnish: [[tehdas]]
-*French: [[manufacture]] ''f''
-*German: [[Fabrik]] ''f'' (''general''), [[Werk]] ''n'' (''general'') [[Papiermühle]] ''f'' (''for paper'')
+*French: [[manufacture]] {{f}}
+*German: [[Fabrik]] {{f}} (''general''), [[Werk]] {{n}} (''general'') [[Papiermühle]] {{f}} (''for paper'')
 {{mid}}
-*Polish: [[fabryka]] ''f''
-*Spanish: [[fabrica]] ''f''
+*Polish: [[fabryka]] {{f}}
+*Spanish: [[fabrica]] {{f}}
 *Turkish: [[fabrika]]
 {{bottom}}
 
 '''building'''
 {{top}}
-*Dutch: [[fabriek]] ''f'' (''general''), [[papierfabriek]] ''f'' (''for paper''), [[staalfabriek]] (''for steel'') [[textielfabriek]] (''for textiles'')
+*Dutch: [[fabriek]] {{f}} (''general''), [[papierfabriek]] {{f}} (''for paper''), [[staalfabriek]] (''for steel'') [[textielfabriek]] (''for textiles'')
 *Finnish: [[tehdas]], [[tehdasrakennus]]
-*French: [[manufacture]] ''f''
-*German: [[Fabrik]] ''f'' (''general''), [[Werk]] ''n'' (''general'') [[Papiermühle]] ''f'' (''for paper'')
+*French: [[manufacture]] {{f}}
+*German: [[Fabrik]] {{f}} (''general''), [[Werk]] {{n}} (''general'') [[Papiermühle]] {{f}} (''for paper'')
 *Turkish: [[bina]], [[yapı]]
 {{mid}}
-*Polish: [[fabryka]] ''f''
-*Spanish: [[fabrica]] ''f''
+*Polish: [[fabryka]] {{f}}
+*Spanish: [[fabrica]] {{f}}
 {{bottom}}
 
 '''establishment that handles a certain type of situation routinely'''
@@ -79,38 +81,40 @@ Old English ''[[mylen]]''
 {{bottom}}
 
 ======Translations to be checked======
-<!--Remove this section once all of the translations below have been moved into the tables above.-->
 {{checktrans}}
 
 *{{ttbc|Interlingua}}: [[fabrica]], [[molino]]
-*{{ttbc|Kashubian}}: [[młin]] ''m'' (3)
+*{{ttbc|Kashubian}}: [[młin]] {{m}} (3)
 *{{ttbc|Norwegian}}: [[mølle]]
-*{{ttbc|Portuguese}}: [[engenho]] ''m'', [[moinho]] ''m'', [[fábrica]] ''f''
+*{{ttbc|Portuguese}}: [[engenho]] {{m}}, [[moinho]] {{m}}, [[fábrica]] {{f}}
 
-===Etymology===
+===Etymology 2===
 Ultimately from Latin ''[[millesimum]]''
+
 ====Noun====
-'''mill''' (''plural'' '''[[mills]]''')
+{{en-noun}}
 
-#An obsolete coin with value one-thousandth of a dollar.
+# An obsolete coin with value one-thousandth of a dollar.
 
-====Translations====
+=====Translations=====
 '''coin'''
 {{top}}
 {{mid}}
 {{bottom}}
 
-===Etymology===
+===Etymology 3===
 From the noun ''mill''
-====Transitive verb====
+
+====Verb====
 {{en-verb}}
 
-#To [[grind]] or otherwise process in a mill or other machine.
-#:''to mill flour''
-#To [[shape]], [[polish]], [[dress]] or [[finish]] using a machine.
-#To [[engrave]] one or more [[groove]]s or a pattern around the edge of (a [[cylindrical]] object such as a coin).
+# {{transitive}} To [[grind]] or otherwise process in a mill or other machine.
+#: ''to mill flour''
+# {{transitive}} To [[shape]], [[polish]], [[dress]] or [[finish]] using a machine.
+# {{transitive}} To [[engrave]] one or more [[groove]]s or a pattern around the edge of (a [[cylindrical]] object such as a coin).
+# {{intransitive}} (''followed by'' '''around''', '''about''', ''etc.'') To move about in an [[aimless]] fashion.
 
-====Translations====
+=====Translations=====
 '''grind or process using a mill or other machine'''
 {{top}}
 *Dutch: [[malen]]
@@ -130,25 +134,25 @@ From the noun ''mill''
 {{mid}}
 {{bottom}}
 
-====Intransitive Verb====
-'''mill'''
-
-#(''followed by'' '''around''', '''about''', ''etc.'') To move about in an [[aimless]] fashion.
-
-====Synonyms====
-*(''move about in an aimless fashion''): [[roam]], [[wander]]
-
-====Translations====
 '''move about in an aimless fashion'''
 {{top}}
 {{mid}}
 {{bottom}}
 
+====Synonyms====
+*(''move about in an aimless fashion''): [[roam]], [[wander]]
+
+===References===
+{{R:Century 1911}}
+{{R:Webster 1913}}
+
 ----
 
 ==Catalan==
+
 ===Etymology===
 Latin [[milium]]
+
 ===Noun===
 '''mill'''
 
@@ -159,29 +163,35 @@ Latin [[milium]]
 ----
 
 ==Irish==
+
 ===Verb===
 '''mill'''
 
-# to [[spoil]]
+# To [[spoil]]
 
 [[Category:Irish verbs]]
 
 ----
 
 ==Scottish Gaelic==
+
 ===Verb===
 '''Mill'''
+
 # To [[destroy]], to [[ruin]].
 
 ----
 
 ==Wiradhuri==
-===Other spellings===
+
+===Alternative spellings===
 *[[mil]]
+
 ===Noun===
 '''mill'''
 
 # [[eye]]
+
 [[Category:Wiradhuri nouns]]
 
 [[fr:mill]]
