--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -114,6 +114,9 @@ From the noun ''mill''
 # {{transitive}} To [[engrave]] one or more [[groove]]s or a pattern around the edge of (a [[cylindrical]] object such as a coin).
 # {{intransitive}} (''followed by'' '''around''', '''about''', ''etc.'') To move about in an [[aimless]] fashion.
 
+=====Synonyms=====
+*(''move about in an aimless fashion''): [[roam]], [[wander]]
+
 =====Translations=====
 '''grind or process using a mill or other machine'''
 {{top}}
@@ -138,9 +141,6 @@ From the noun ''mill''
 {{top}}
 {{mid}}
 {{bottom}}
-
-====Synonyms====
-*(''move about in an aimless fashion''): [[roam]], [[wander]]
 
 ===References===
 {{R:Century 1911}}
