en-verb <weight#1236926>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -81,7 +81,7 @@ Old English ''[[wiht]]'', ''ġewiht''
 *[[weigh]]
 
 ===Transitive verb===
-{{en-infl-reg-consonant|weight||}}
+{{en-verb}}
 
 # To [[add]] weight to something, in order to make it [[heavier]].
 # To [[load]], [[burden]] or [[oppress]] someone.
