--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -8,9 +8,9 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 *{{audio|en-us-division.ogg|Audio (US)}}
 
 ===Noun===
-'''division''' (''[[countable]] and [[uncountable]]; plural'' '''[[divisions]]''')
+{{en-noun|s|-}}
 
-#(''uncountable'') The act or process of dividing anything.
+#{{uncountable}} The act or process of dividing anything.
 #Each of the separate parts of something resulting from division.
 #{{arithmetic}} (''uncountable'') The [[process]] of [[divide|dividing]] a number by another.
 #{{arithmetic}} A calculation that involves this process.
@@ -20,15 +20,12 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 #{{botany}} A [[rank]] ("division", ''divisio'' or "phylum") in [[plant]] [[taxonomy]] corresponding to the [[phylum]] in [[animal]] [[taxonomy]].
 #{{botany}} A [[taxon]] at the rank of division or phylum.
 #A disagreement; a difference of viewpoint between two sides of an argument.
-#(''Sports''): A group that distinguishes itself from the others.
-#(''music'') A florid instrumental variation of a melody in the 17th and 18th centuries, 
+#{{sports}} A group that distinguishes itself from the others.
+#{{music}} A florid instrumental variation of a melody in the 17th and 18th centuries, originally conceived as the dividing of each of a succession of long notes into several short ones.
 #{{music}} A set of pipes in a [[pipe organ]] which are independantly controlled and supplied.
-originally conceived as the dividing of each of a succession of long notes into several short ones.
-#(Law:) A concept whereby a common group of debtors are only responsible for their proportionate sum of the total debt.
-
+#{{law}} A concept whereby a common group of debtors are only responsible for their proportionate sum of the total debt.
 
 ====Translations====
-
 '''act or process of dividing anything'''
 {{top}}
 *Afrikaans: [[verdeling]]
@@ -163,11 +160,12 @@ Finnish: [[kaari]], [[pääjakso]]
 [[Category:1000 English basic words]]
 
 ==Swedish==
+
 ===Noun===
 {{sv-noun-reg-r-c|2=divisione}}
 
 #[[division#English|division]]; act of dividing (e.g. numbers); large military unit; section of a company
-#(''sports'') division ''or'' [[league]]; a organization of sports teams that habitually play against each other for a championship; the level on which a certain team plays, as compared to others
+#{{sports}} division ''or'' [[league]]; a organization of sports teams that habitually play against each other for a championship; the level on which a certain team plays, as compared to others
 
 [[ar:division]]
 [[de:division]]
