--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -11,7 +11,7 @@
 
 # a sound made by a [[duck]].
 #:''Did you hear that duck make a '''quack'''?''
-# a fraudulent [[doctor]] of [[medicine]], an [[impostor]] who claims to have qualifications to practice [[medicine]].
+# a fraudulent or incompetent [[doctor]] of [[medicine]], an [[impostor]] who claims to have qualifications to practice [[medicine]].
 #:''That doctor is nothing but a lousy '''quack'''!''
 # a [[charlatan]].
 #:''What a '''quack''' he is, saying that's an organic [[Viagra]]&#8482; !'' 
