--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -19,8 +19,9 @@
 *Dutch: [[weddenschap]] ''f'' (1), [[waarschijnlijkheid]] ''f'' (2)
 *German: [[Wette]] ''f'' (1), [[Bestimmtheit]] ''f'' (2)
 *Greek: [[στοίχημα]] [ˈstiçiˌma] ''n'' (1)
-*Italian: [[scommessa]] ''f'' (1)
+*Hebrew: [[הימור]] {{m}}
 {{mid}}
+*Italian: [[scommessa]] ''f'' (1)
 *Latvian: [[likme]] ''f'' (1)
 *Swedish: [[vad#Noun|vad]] ''n'' (1)
 *[[w:Wu (linguistics)|Wu]] ([[w:Suzhou dialect|Suzhou dialect]]): [[ruán-tondæ]]
