--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -9,7 +9,7 @@
 
 ===Translations===
 *Finnish: [[rikollinen]], [[konna]]
-*German: [[Gauner]] {{m}}
+*German: [[Gauner]] {{m}}, [[Ganove]] {{m}}
 
 ===Noun===
 * A [[staff]] with a [[hook]] at one end, particularly one used by [[shepherd]]s.
