--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -16,7 +16,7 @@
 
 ===Translations===
 *Finnish: [[käyräsauva]]
-*German: [[Hirtenstab]] {{m}}
+*German: [[Hirtenstab]] {{m}}, [[Krummstab]] {{m}}
 
 ===Noun===
 * A [[bend]].  (''She held the baby in the '''crook''' of her arm.'')
