--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -106,6 +106,7 @@ Old English [[īġland]].  The S was added by confusion with French ''[[isle]]''
 [[ja:island]]
 [[pl:island]]
 [[pt:island]]
+[[simple:island]]
 [[fi:island]]
 [[sv:island]]
 [[ta:island]]
