robot  Adding: pt <rabbit#1251426>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -142,8 +142,9 @@ From [[Cockney rhyming slang]] ''rabbit and pork'', to talk.
 [[it:rabbit]]
 [[hu:rabbit]]
 [[nl:rabbit]]
+[[pt:rabbit]]
 [[ru:rabbit]]
 [[fi:rabbit]]
-[[ta:rabbit]]
 [[sv:rabbit]]
+[[ta:rabbit]]
 [[zh:rabbit]]
