--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -164,4 +164,5 @@ Common Germanic *''[[raudhaz]]'', whence also Old English ''[[rēad]]'', Old Nor
 [[ro:rot]]
 [[fi:rot]]
 [[sv:rot]]
+[[vi:rot]]
 [[zh:rot]]
