robot  Adding: vi <simple#1251957>

--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -65,8 +65,8 @@ From French ''simple'', from Latin ''[[simplex]]''
 [[Category:1000 English basic words]]
 
 [[ang:simple]]
-[[es:simple]]
 [[et:simple]]
+[[es:simple]]
 [[fa:simple]]
 [[fr:simple]]
 [[ko:simple]]
@@ -77,4 +77,5 @@ From French ''simple'', from Latin ''[[simplex]]''
 [[pt:simple]]
 [[simple:simple]]
 [[fi:simple]]
+[[vi:simple]]
 [[zh:simple]]
