robot  Adding: simple <thing#1252093>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -166,6 +166,7 @@ From Middle English, from Old English ''[[þing]]''.
 [[la:thing]]
 [[hu:thing]]
 [[pt:thing]]
+[[simple:thing]]
 [[fi:thing]]
 [[sv:thing]]
 [[ta:thing]]
