WT:ELE-ify <crook#1253503>

--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -4,29 +4,30 @@
 *{{audio|en-us-crook.ogg|Audio (US)}}
 
 ===Noun===
-'''crook'''  (''plural:'' '''[[crooks]]''')
-* A [[criminal]] who steals.
+{{en-noun}}
+
+# A [[criminal]] who steals.
+# A [[staff]] with a [[hook]] at one end, particularly one used by [[shepherd]]s.
+# A [[bend]].
+#:''She held the baby in the '''crook''' of her arm.''
 
 ===Translations===
+'''A criminal who steals'''
 *Finnish: [[rikollinen]], [[konna]]
 *German: [[Gauner]] {{m}}, [[Ganove]] {{m}}
 
-===Noun===
-* A [[staff]] with a [[hook]] at one end, particularly one used by [[shepherd]]s.
-
-===Translations===
+'''A staff with a hook at one end, particularly one used by shepherds'''
 *Finnish: [[käyräsauva]]
 *German: [[Hirtenstab]] {{m}}, [[Krummstab]] {{m}}
 
-===Noun===
-* A [[bend]].  (''She held the baby in the '''crook''' of her arm.'')
-
-===Translations===
+'''a bend'''
 *Finnish: [[taive]]
 
 ===Transitive verb===
 {{en-verb}}
-* To bend. (''He '''crooked''' his finger toward me.'')
+
+# To bend.
+#: ''He '''crooked''' his finger toward me.''
 
 ===Translations===
 *Finnish: [[koukistaa]]
