/* Derived terms */ <rot#1255044>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -81,6 +81,8 @@ Old High German ''[[rōt]]'', akin to Old Saxon ''rōd'', compare Dutch ''[[rood
 *[[Rotkehlchen]]
 *[[Rotstift]]
 *[[Rotwein]]
+*[[röten]]
+*[[Rötung]]
 
 ===Related terms===
 *[[Rot]]
