robot  Adding: vi <sir#1255884>

--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -89,5 +89,6 @@ Via Norman French from Latin ''[[senior]]'', '''older''' or '''elder''', from ''
 [[ja:sir]]
 [[pl:sir]]
 [[sl:sir]]
+[[vi:sir]]
 [[tr:sir]]
 [[zh:sir]]
