--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -1,14 +1,16 @@
 ==English==
+
+===Pronunciation===
+*{{IPA|/bɪ'həʊld/}}
+
 ===Verb===
-{{irregverb|'''to behold'''|'''[[beholds]]'''|'''[[beheld]]'''|'''[[beheld]]'''|'''[[beholding]]'''}}
-#''(transitive)'' to [[watch]], [[look at]]
+{{en-verb|beholds|beholding|beheld}}
 
-==== Pronunciation ====
-*[[w:IPA|IPA]]: /bɪ'həʊld/
+# {{transitive}} to [[watch]], [[look at]]
 
-==== Translations ====
+====Translations====
 {{top}}
-*Catalan: mirar, vigilar
+*Catalan: [[mirar]], [[vigilar]]
 *Dutch: [[aanschouwen]]
 *Finnish: [[katsoa]] (1)
 *French: [[regarder]], [[voir]]
@@ -17,7 +19,9 @@
 {{mid}}
 {{bottom}}
 
-[[Category:English transitive verbs]]
+===References===
+{{R:Century 1911}}
+{{R:Webster 1913}}
 
 [[fr:behold]]
 [[gl:behold]]
