--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -1,13 +1,12 @@
 ==English==
 
+===Pronunciation===
+*{{IPA|/'bliːd/}}
+
 ===Verb===
-{{irregverb|'''to bleed'''
-*IPA: /'bliːd/|'''[[bleeds]]'''
-:/'bliːdz/|'''[[bled]]'''
-:/bled/|'''[[bled]]'''
-:/bled/|'''[[bleeding]]'''
-:/'bliːdɪŋ/}}
-#''(intransitive)'' Of an animal, to [[lose]] [[blood]] through an [[injured]] [[blood vessel]].
+{{en-verb|bleeds|bleeding|bled}}
+
+# {{intransitive}} Of an animal, to [[lose]] [[blood]] through an [[injured]] [[blood vessel]].
 
 ====Derived terms====
 *[[bleeding heart]]
@@ -21,7 +20,7 @@
 *Finnish: [[vuotaa]] [[veri|verta]]
 *French: [[saigner]]
 *German: [[bluten]]
-*Indonesian: [[darah|berdarah]], [[keluar|mengeluarkan]] [[darah]], [[kucur|mengucurkan]] [[darah]], [[alir|mengalirkan]] [[darah]] 
+*Indonesian: [[darah|berdarah]], [[keluar|mengeluarkan]] [[darah]], [[kucur|mengucurkan]] [[darah]], [[alir|mengalirkan]] [[darah]]
 {{mid}}
 *Japanese: [[出血]]する ([[しゅっけつ]]する, shukketsu-suru), [[血]]を[[流す]] ([[ち]]を[[ながす]], chi-wo-nagasu)
 *Polish: [[krwawić]]
@@ -31,7 +30,9 @@
 *Turkish: [[kanamak]] [-ar]
 {{bottom}}
 
-[[Category:Bodily fluids]]
+===References===
+{{R:Century 1911}}
+{{R:Webster 1913}}
 
 [[ar:bleed]]
 [[fr:bleed]]
