--- a/en/b/bled.6802.wikitext
+++ b/en/b/bled.6802.wikitext
@@ -1,28 +1,12 @@
 ==English==
 
-===Verb===
-'''bled'''
-
-# past tense of to [[bleed]]
-
 ===Pronunciation===
-*[[w:SAMPA|SAMPA]]: /'/
-*[[w:IPA|IPA]]: /'blεd/
-
-===Translations===
-*Dutch: [[bloedde]]
+*{{IPA|/ˈbled/}}
 
 ===Verb===
 '''bled'''
 
-# past participle of to [[bleed]]
-
-===Pronunciation===
-*[[w:SAMPA|SAMPA]]: /'/
-*[[w:IPA|IPA]]: /'blεd/
-
-===Translations===
-*Dutch: [[gebloed]]
+# {{past of|bleed}}
 
 [[fr:bled]]
 [[sl:bled]]
