spanish added <staff#1262941>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -28,6 +28,7 @@ Old English ''[[stæf]]''
 *German: [[Stab]] ''m''
 *Hebrew: [[מקל|מַקֵּל]] ''m''
 *Ido: [[bastono]]
+*Spanish: [[bastón]] ''m'', [[báculo]] ''m''
 {{bottom}}
 
 '''a series of horizontal lines'''
@@ -36,6 +37,7 @@ Old English ''[[stæf]]''
 *French: [[portée]] ''f''
 {{mid}}
 *German: [[Notenlinien]] ''f'' ''pl''
+*Spanish: [[varas]] ''f'' ''pl''
 {{bottom}}
 
 '''the employees of a business'''
@@ -46,6 +48,7 @@ Old English ''[[stæf]]''
 {{mid}}
 *French: [[personnel]] ''m'', [[staff#French|staff]] ''m''
 *German: [[Belegschaft]] ''f'', [[Personal]] ''n''
+*Spanish: [[personal]] ''m''
 *Swedish: [[personal]]
 {{bottom}}
 
