--- a/en/p/prisoner of war.4326.wikitext
+++ b/en/p/prisoner of war.4326.wikitext
@@ -37,3 +37,5 @@
 '''[[prisoner]]-[[of]]-[[war]]''' (''before the noun''), '''prisoner of war''' (''after the noun'')
 # Of or relating to a prisoner of war or prisoners of war.
 #: ''After his capture he was taken to a '''prisoner-of-war''' camp.''
+
+[[Category:Military]]
