--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-Ultimately ''[[dudde]]''- ragged clothing ''(of uncertain origin, 1500's)''
+Ultimately from ''[[dudde]]'' (ragged clothing''), of uncertain origin beyond that.
 
 ===Pronunciation===
 *dŭd, /dʌd/, /<tt>dVd</tt>/
@@ -12,6 +12,7 @@ Ultimately ''[[dudde]]''- ragged clothing ''(of uncertain origin, 1500's)''
 
 # A broken or nonfunctional device that does not perform its intended function, such as a [[bomb]]
 
+[[Category:Palindromes]]
 
 ----
 
@@ -22,6 +23,7 @@ From Arabic {{ARchar|[[توت|تُوت]]}} (''tut'') via Turkish [[dut]].
 '''dud''' {{m}}
 #[[mulberry]]
 
+[[Category:Bosnian palindromes]]
 
 ----
 
@@ -31,20 +33,25 @@ From Arabic {{ARchar|[[توت|تُوت]]}} (''tut'') via Turkish [[dut]].
 
 #[[mulberry]]
 
+[[Category:Croatian palindromes]]
 
 ----
 
 ==Serbian==
+
 ===Etymology===
 From Arabic {{ARchar|[[توت|تُوت]]}} (''tut'') via Turkish [[dut]].
+
 ===Noun===
 '''dud''' {{m}}
 #[[mulberry]]
+
 ====See also====
 *[[дуд#Serbian|дуд]]
 
 [[Category:bs:Fruits]]
 [[Category:Croatian nouns]]
+[[Category:Serbian palindromes]]
 [[Category:sr:Fruits]]
 
 [[it:dud]]
