--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -1,5 +1,5 @@
 ==English==
-
+[[Category:English palindromes]]
 ===Etymology===
 Ultimately from ''[[dudde]]'' (ragged clothing''), of uncertain origin beyond that.
 
@@ -11,8 +11,6 @@ Ultimately from ''[[dudde]]'' (ragged clothing''), of uncertain origin beyond th
 '''dud''' (''plural:'' [[duds]])
 
 # A broken or nonfunctional device that does not perform its intended function, such as a [[bomb]]
-
-[[Category:Palindromes]]
 
 ----
 
