--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -10,8 +10,9 @@ Ultimately from ''[[dudde]]'' (ragged clothing''), of uncertain origin beyond th
 ===Noun===
 '''dud''' (''plural:'' [[duds]])
 
-# A broken or nonfunctional device that does not perform its intended function, such as a [[bomb]]
-
+# A broken or nonfunctional device that does not perform its intended function, such as a [[bomb]].
+====Translations====
+*German: [[Blindgänger]] ''m''
 ----
 
 ==Bosnian==
