see also <POW#1291918>

--- a/en/p/POW.4325.wikitext
+++ b/en/p/POW.4325.wikitext
@@ -1,8 +1,9 @@
+{{see|pow}}
 ==English==
 === Abbreviation ===
-'''POW''' (''plural'' '''POWs''')
+'''POW''' (''plural'' '''[[POWs]]''')
 
-#[[Prisoner of war]]
+# [[prisoner of war]]
 #:''After his capture he was taken to a camp for POWs.''
  
 ==== Translations ====
