--- a/en/b/BX.4329.wikitext
+++ b/en/b/BX.4329.wikitext
@@ -1,22 +1,20 @@
 {{see|Bx}}
 
 ==English==
+
 ===Pronunciation===
 * Rhymes: [[Rhymes:English:-ěx|-ěx]]
 
 ===Initialism===
-'''B.X.'''<br>
-'''BX'''
-
+'''B.X.''' or '''BX'''
 # '''Base Exchange''' of the U.S. [[Air Force]].
 #:''Despite the reduced price of goods at the '''BX''', everything is of high quality''.
 
 ===Etymology===
-Former trademark of General Electric Company
+Former trademark of General Electric Company.
 
 ====Noun====
 '''BX'''
-
 # A [[flexible]], metal-[[armored]] [[electrical]] [[cable]].
 
 =====Synonyms=====
@@ -25,3 +23,6 @@ Former trademark of General Electric Company
 ====Related terms====
 * [[electrical cable]]
 * [[power cable]]
+
+[[Category:Abbreviations, Acronyms and Initialisms]]
+[[Category:Military]]
