--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -40,8 +40,7 @@
 
 # A [[curve]].
 #: ''There's a sharp bend in the road ahead.''
-# {{nautical}} A [[combination]] of [[turns]] and [[tucks]] by which a [[line]] is [[fastened]] to
-another one; to [[tie]], as in [[securing]] a line to a [[cleat]]; to [[shackle]] a [[chain]] to an [[anchor]]; make fast. (FM 55-501).
+# {{nautical}} A [[combination]] of [[turns]] and [[tucks]] by which a [[line]] is [[fastened]] to another one; to [[tie]], as in [[securing]] a line to a [[cleat]]; to [[shackle]] a [[chain]] to an [[anchor]]; make fast. (FM 55-501).
 #* Note: In naval parlance, a knot involves splicing the strands of a rope.
 # (''plural, medicine, diving'') '''The bends''': A severe condition caused by excessively quick decompression, causing bubbles of [[nitrogen]] to form in the [[blood]]; [[decompression sickness]].
 #: ''A diver who stays deep for too long must ascend very slowly in order to prevent the bends.''
