--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -78,6 +78,7 @@ The translations below need to be checked by native speakers and inserted into t
 [[Category:Malay derivations]]
 
 [[ar:bamboo]]
+[[fa:bamboo]]
 [[fr:bamboo]]
 [[io:bamboo]]
 [[hu:bamboo]]
