checked french <blow#1302951>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -44,6 +44,7 @@
 produce an air current 
 {{top}}
 *Dutch: [[blazen]]
+*French: [[souffler]]
 *German: [[blasen]], [[pusten]], [[wehen]]
 {{mid}}
 *Russian: [[дуть]]/[[дунуть]] (dut'/dúnut'), [[сморкаться]]/[[сморкнуться]] (smorkát's'a/smorknút's'a) (blow the nose)
@@ -56,6 +57,7 @@ be propelled by an air current
 explode <!--3-->
 {{top}}
 *Dutch: [[springen]], [[ontploffen]]
+*French: [[exploser]]
 *German: [[hochgehen]], [[in]] [[die]] [[Luft]] [[gehen]], [[explodieren]]
 {{mid}}
 *Russian: [[взрываться]]/[[взорваться]] (vzryvát's'a/vzorvát's'a), [[взлетать на воздух]]/[[взлететь на воздух]] (vzletát' na vózduχ/vzlet'ét' na vózduχ)
@@ -83,6 +85,7 @@ squander <!--7-->
 {{bottom}}
 fellate <!--8-->
 {{top}}
+*French: [[sucer]]
 {{mid}}
 {{bottom}}
 create or shape by blowing <!--9-->
@@ -103,7 +106,6 @@ leave <!--10-->
 *{{ttbc|Chinese}}: [[吹]]
 *{{ttbc|Esperanto}}: [[blovi]]
 *{{ttbc|Finnish}}: [[tuulla]] (1), [[puhaltaa]] (2), [[räjähtää]] (3)
-*{{ttbc|French}}: [[souffler]] (1), [[exploser]] (3)
 *{{ttbc|Indonesian}}: [[tiup|meniup]], [[ledak|meledakkan]]
 *{{ttbc|Japanese}}: [[吹く]] ([[ふく]], fuku), [[爆発]]する ([[ばくはつ]]する, bakuhatsu-suru)
 *{{ttbc|Spanish}}: [[soplar]]
