--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -20,7 +20,7 @@ From {{L.}} and Old French  ''[[capere]]'' to capture.
 *[[cop out]], [[cop-out]]
 
 ===Etymology 2===
-Short for [[copper]] “police officer”, itself from “cop” above (“one who cops”, e.g. criminals).  Another theory behind this etymology is cop is an acronym for "constable on patrol"
+Short for [[copper]] “police officer”, itself from “cop” above (“one who cops”, e.g. criminals).  
 
 Sometimes explained as deriving from copper buttons or badges of early [[NYPD]] uniforms, though this is often stated to be a [[folk etymology]].
 
