revised wikipedia link <whistler#1311104>

--- a/en/w/whistler.7356.wikitext
+++ b/en/w/whistler.7356.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Noun===
-{{wikipediapar|Whistler (radio)}}
+{{wikipediapar|Whistler}}
 '''whistler'''
 # someone or something that [[whistle]]s
 # the [[whistling marmot]]
