--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -5,7 +5,7 @@
 
 {{wikipedia}}
 ====Etymology====
-Old English [[īġland]].  The S was added by confusion with French ''[[isle]]'', which is not related but is instead from Latin ''[[insula]]''.  Cognate with German ''[[Aue]]'', "meadow", and Latin ''[[aqua]]''.  Compare German ''[[Eiland]]'', Old Norse ''[[eyland]]'', and English ''[[ey]]'' as in [[Anglesey]], [[Bardsey]], [[Ely]].
+Old English [[īġland]].  The S was added by confusion with French ''[[isle]]'', which is not related but is instead from Latin ''[[insula]]''.  Cognate with German ''[[Aue]]'', "water-meadow", and Latin ''[[aqua]]''.  Compare German ''[[Eiland]]'', Old Norse ''[[eyland]]'', and English ''[[ey]]'' as in [[Anglesey]], [[Bardsey]], [[Ely]].
 
 ===Pronunciation===
 *{{audio|en-us-island.ogg|Audio (US)}}
